BPER/DEVF/force-app/main/default/objects/CRM_MessagingSessionMetrics__c/CRM_MessagingSessionMetrics__c.object-meta.xml
<CustomObject>
    <label>Metriche sessione di messaggistica</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome Metriche sessione di messaggistica</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metriche sessioni di messaggistica</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>