BPER/DEVF/force-app/main/default/objects/CRM_MessagingSessionMetrics__c/fields/CRM_Actor__c.field-meta.xml
<CustomField>
    <fullName>CRM_Actor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attore</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Metriche_sessioni_di_messaggistica</relationshipName>
    <type>Lookup</type>
</CustomField>