BPER/DEVF/force-app/main/default/objects/CRM_MessagingSessionMetrics__c/fields/CRM_ActorType__c.field-meta.xml
<CustomField>
    <fullName>CRM_ActorType__c</fullName>
    <label>Tipo di attore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>EndUser</fullName>
            </value>
            <value>
                <fullName>Bot</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>