BPER/DEVF/force-app/main/default/objects/CRM_MessagingSessionMetrics__c/fields/CRM_EntryTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_EntryTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data di ingresso</label>
    <type>DateTime</type>
</CustomField>