BPER/DEVF/force-app/main/default/objects/CRM_MessagingSessionMetrics__c/fields/CRM_MessaginSession__c.field-meta.xml
<CustomField>
    <fullName>CRM_MessaginSession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sessione di Messaggistica</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Metriche sessioni di messaggistica</relationshipLabel>
    <relationshipName>Metriche_sessioni_di_messaggistica</relationshipName>
    <type>Lookup</type>
</CustomField>