BPER/DEVF/force-app/main/default/objects/CRM_MessagingSessionMetrics__c/fields/CRM_ParentEntryDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_ParentEntryDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data di ingresso (padre)</label>
    <type>DateTime</type>
</CustomField>