BPER/DEVF/force-app/main/default/objects/CRM_MessagingSessionMetrics__c/fields/CRM_ParentEntryID__c.field-meta.xml
<CustomField>
    <fullName>CRM_ParentEntryID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID conversazione padre</label>
    <length>18</length>
    <type>Text</type>
</CustomField>