BPER/DEVF/force-app/main/default/objects/CRM_MessagingSessionMetrics__c/fields/CRM_ParentMessage__c.field-meta.xml
<CustomField>
    <fullName>CRM_ParentMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Messaggio (padre)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>