BPER/DEVF/force-app/main/default/objects/CRM_MessagingSessionMetrics__c/fields/CRM_ResponseTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_ResponseTime__c</fullName>
    <formula>(IF(CRM_MessaginSession__r.AcceptTime &gt;= CRM_ParentEntryDate__c, CRM_EntryTime__c - CRM_MessaginSession__r.AcceptTime, CRM_EntryTime__c - CRM_ParentEntryDate__c) )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo di risposta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>