BPER/DEVF/force-app/main/default/objects/CRM_MessagingSessionMetrics__c/fields/CRM_Sequence__c.field-meta.xml
<CustomField>
    <fullName>CRM_Sequence__c</fullName>
    <label>Sequenza</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>